--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -9,57 +9,59 @@
             <form class="form" method="POST">
                 <!-- div for the "name" but user can edit items as well-->
                 <div class="form-group">
-                    <label for="nameTextField"> Name </label>
+                    <label for="userTextField"> User </label>
                     <input type="text" class=form-control 
-                    id="nameTextField"
-                    placeholder="Enter the Recipe NAme"
-                    name="name" 
-                    value = "<%= recipe.name %>"
+                    id="userTextField"
+                    placeholder="Enter the User Name"
+                    name="user" 
+                    value = "<%= MovieList.user %>"
                     required>
                 </div>
 
                 <!-- div for the "text" but user can edit items as well-->
                  <div class="form-group">
-                    <label for="difficultyTextField"> Difficulty </label>
+                    <label for="subscriptionTierTextField"> Subscription Tier </label>
                     <input type="text" class=form-control 
-                    id="difficultyTextField"
-                    placeholder="Enter the Difficulty"
-                    name="difficulty" 
-                    value = "<%= recipe.difficulty %>"
+                    id="subscriptionTierTextField"
+                    placeholder="Enter the Subscription Tier"
+                    name="subscriptionTier" 
+                    value = "<%= MovieList.subscriptionTier %>"
                     required>
                 </div>
 
 
                  <!-- div for the "form" but user can edit items as well-->
                  <div class="form-group">
-                    <label for="ingredientsTextField"> Ingredients </label>
+                    <label for="movieNameTextField"> Movie Name </label>
                     <input type="text" class=form-control 
-                    id="ingredientsTextField"
-                    placeholder="Enter the Ingredients"
-                    name="ingredients" 
-                    value = "<%= recipe.ingredients %>"
+                    id="movieNameTextField"
+                    placeholder="Enter the movieName"
+                    name="movieName" 
+                    value = "<%= MovieList.movieName %>"
                     required>
                 </div>
 
                 <!-- div for the "time" but user can edit items as well-->
                 <div class="form-group">
-                    <label for="timeTextField"> Time  </label>
-                    <input type="number" class=form-control 
-                    id="timeTextField"
+                    <label for="rentDateTextField"> Rent Date  </label>
+                    <input type="text" class=form-control 
+                    id="rentDateTextField"
                     placeholder="Enter the Time to cook "
-                    name="time" 
-                    value = "<%= recipe.time %>"
+                    onfocus="(this.type='date')"
+                    name="rentDate" 
+                    value = "<%= MovieList.rentDate %>"
                     required>
                 </div>
 
                 <!-- div for the "price" but user can edit items as well-->
                  <div class="form-group">
-                    <label for="priceTextField"> Price </label>
-                    <input type="number" class=form-control 
-                    id="priceTextField"
-                    placeholder="Enter the Price "
-                    name="price" 
-                    value = "<%= recipe.price %>"
+                    <label for="returnDateTextField"> Return Date </label>
+                    <input type="text" class=form-control 
+                    id="returnDateTextField"
+                    placeholder="Enter the returnDate "
+                    onfocus="(this.type='date')"
+                    name="Return Date" 
+                    value = "<%= MovieList.returnDate %>"
                     required>
                 </div>
                 <br>
@@ -68,7 +70,7 @@
                     <i class="fas fa-edit"> </i> Submit 
                 </button>
 
-                <a href="/recipes" class="btn btn-warning">
+                <a href="/blockbuster" class="btn btn-warning">
                     <i class="fas fa-undo"></i> Cancel </a>
             </form>
 
