--- a/server/views/partials/bottom_nav.ejs
+++ b/server/views/partials/bottom_nav.ejs
@@ -10,9 +10,9 @@
 
 
 
-<div class="fixed-bottom navbar-dark bg-dark">
+<div class="fixed-bottom navbar-dark" style="background-color:#0b075a">
   <div class="text-center text-white p-3 bottom " >
-    <h6 class="navbar-text" style="color:white">&copy; 2022 by Belal Sahibzada</h6>
+    <h6 class="navbar-text" style="color:#FFCC00 ">&copy; 2022 by Landon, Marco, Mutasim, Belal, and Caleb</h6>
   </div>
 </div>
 
