--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,8 +6,8 @@
       <h1 class="display-4">Welcome to the <%= title %> Page</h1>
       
       <a href="/recipes" id="start-button"
-             class="btn btn-primary">
-             <i class="fa-solid fa-jedi"></i> Get Started </a> 
+             class="btn " style="background-color:#FFCC00">
+             <i class="fa-solid fa-clapperboard"></i> Get Started </a> 
        
     </div>
   </div>
