Home button fix

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="container">
       <h1 class="display-4">Welcome to the <%= title %> Page</h1>
       
-      <a href="/recipes" id="start-button"
+      <a href="/blockbuster" id="start-button"
              class="btn " style="background-color:#FFCC00">
              <i class="fa-solid fa-clapperboard"></i> Get Started </a> 
        
