--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,8 +2,8 @@
 <%- include partials/main_nav %>
 <main>
   <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Welcome to the <%= title %> Page</h1>
+    <div class="homeContainer">
+      <h1 class="display-4">Welcome to  <%= title %></h1>
       
       <a href="/blockbuster" id="start-button"
              class="btn " style="background-color:#FFCC00">
