--- a/server/views/movie/list.ejs
+++ b/server/views/movie/list.ejs
@@ -4,7 +4,7 @@
     
       <div class="row">
         <div class="col-md-offset-3 col-md-12"> <!--web page can contain max of 8 columns, if you want to change it, change col-md-8-->
-            <h1 class="recipe-title"><%= title %></h1>
+            <h1 class="listTitle"><%= title %></h1>
             <br>
             <a href="/blockbuster/add" class="btn btn-primary" role="button">
               <i class="fas fa-plus-circle"></i> Rent a Movie </a>
@@ -12,15 +12,15 @@
             <br>
       
       <!-- displays the table headers (th) and displays table content (td)-->
-      <table class="table table-bordered table-striped table-hover">
+      <table class="table table-bordered table-striped table-hover"  style="border: 2px solid #FFCC00">
       <tr> 
-        <th class="text-center col-2" style="color:white"> User </th>
-        <th class="text-center col-2" style="color:white"> Subscription Tier </th>
-        <th class="text-center col-2" style="color:white"> Movie Name </th>
-        <th class="text-center col-1" style="color:white"> Rent Date </th>
-        <th class="text-center col-2" style="color:white"> Return Date </th>
-        <th class="text-center col-1" style="color:white"> Edit </th>
-        <th class="text-center col-1" style="color:white"> Delete </th>
+        <th class="text-center col-2" style="background-color:#FFCC00"> User </th>
+        <th class="text-center col-2" style="background-color:#FFCC00"> Subscription Tier </th>
+        <th class="text-center col-2" style="background-color:#FFCC00"> Movie Name </th>
+        <th class="text-center col-1" style="background-color:#FFCC00"> Rent Date </th>
+        <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
+        <th class="text-center col-1" style="background-color:#FFCC00"> Edit </th>
+        <th class="text-center col-1" style="background-color:#FFCC00"> Delete </th>
       </tr>
       <% for(let count=0; count<MovieList.length; count++) { %> 
         <tr> 
@@ -31,7 +31,7 @@
             <td class="text-center col-2" style="color:white"> <%= MovieList[count].returnDate %></td>
             <td class="text-center col-1" style="color:white">
              <a href="/blockbuster/edit/<%= MovieList[count]._id %>"
-             class="btn btn-primary" style="background-color:#d4b52f" >
+             class="btn btn-primary" style="background-color:#FFA500" >
              <i class="fas fa-pencil-alt" ></i> Edit </a> </td>
             <td class="text-center col-1">
              <a href="/blockbuster/delete/<%= MovieList[count]._id %>"
