--- a/public/content/app.css
+++ b/public/content/app.css
@@ -21,18 +21,13 @@ h1 {
   color: #FFCC00;
 }
 
-.recipe-title {
+.listTitle {
   font-family: 'Playfair Display', serif; 
   position: relative;
   top: 12%;
   left: 0%;
   animation: fade-in 2s 1;
   color: #FFCC00;
-}
-
-@keyframes fade {
-  100% {margin-top:0%; opacity:1.0}
-  0% {margin-top:100%; opacity:0.0}
 }
 
 /*animation for when page loads*/
@@ -64,3 +59,17 @@ p {
 #navbarSupportedContent {
   color:#FFCC00; 
 }
+
+.homeContainer { 
+  animation: fadeIn 4s 1;
+}
+  
+@keyframes fadeIn {
+  100% {margin-top:0%; opacity:1.0}
+  0% {margin-top:100%; opacity: 1.0}
+ 
+}
+  @keyframes fade {
+    0% {margin-top:0%; opacity:1.0}
+    0% {margin-top:100%; opacity:0.0}
+  }
