--- a/server/views/movie/add.ejs
+++ b/server/views/movie/add.ejs
@@ -6,7 +6,7 @@
 <div class="container-center">
     <div class="row"> 
         <div class="col-md-offset-3 col-md-6">
-            <h1 class="recipe-title"> <%= title %></h1> <br><br>
+            <h1 class="listTitle"> <%= title %></h1> <br><br>
             <form class="form" method="POST">
                 <!-- div for the "name"-->
                 <div class="form-group">
