--- a/public/content/app.css
+++ b/public/content/app.css
@@ -1,24 +1,38 @@
 /* Custom CSS goes here */
+
+/*Imported Custom Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;500;600;700&display=swap');
 body {
   background-color: #0b075a  !important;
   margin: 0px;
   font-family: 'Playfair Display', serif;
 }
 
+.homeContainer { 
+  flex-direction: column;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 48px !important;
+  animation: fadeIn 2s 1;
+}
+
 /*title styling*/
-h1 {
-  font-family: 'Playfair Display', serif;
-  position: absolute;
-  top: 40%;
-  right: 0;
-  left:0;
-  bottom: 0;
-  text-align: center;
+h1{
+  font-family: 'Bebas Neue', serif;
+  font-size: 110px !important;
+  text-align: center !important;
+  margin-top: 10% !important;
+  /*padding: auto !important;*/
   animation: fade-in 2s 1;
   color: #FFCC00;
+}
+
+#start-button {
+  
 }
 
 .listTitle {
@@ -45,12 +59,7 @@ img {
   color:white;
 }
 
-#start-button {
-  position: absolute;
-  top: 55%;
-  left: 45%;
-  padding: 18px; 
-}
+
 
 p {
   background-color: #0b075a;
@@ -60,9 +69,7 @@ p {
   color:#FFCC00; 
 }
 
-.homeContainer { 
-  animation: fadeIn 4s 1;
-}
+
   
 @keyframes fadeIn {
   100% {margin-top:0%; opacity:1.0}
