Removed Jumbotron, made title and button flexbox

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,16 +1,12 @@
 <%- include partials/header %>
 <%- include partials/main_nav %>
 <main>
-  <div class="jumbotron jumbotron-fluid">
     <div class="homeContainer">
-      <h1 class="display-4">Welcome to  <%= title %></h1>
-      
-      <a href="/blockbuster" id="start-button"
+      <h1 class="home-title">Welcome to  <%= title %></h1>
+        <a href="/blockbuster" id="start-button"
              class="btn " style="background-color:#FFCC00">
              <i class="fa-solid fa-clapperboard"></i> Get Started </a> 
-       
     </div>
-  </div>
 </main>
 
 
