--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,8 +4,8 @@
     <div class="homeContainer">
       <h1 class="home-title">Welcome to  <%= title %></h1>
         <a href="/blockbuster" id="start-button"
-             class="btn " style="background-color:#FFCC00">
-             <i class="fa-solid fa-clapperboard"></i> Get Started </a> 
+             class="btn" style="background-color:#FFCC00">
+             <i class="fa-solid fa-clapperboard fa-2x"></i> Get Started </a> 
     </div>
 </main>
 
