--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,7 +1,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0b075a" >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"> <img src="/assets/images/logo3.png" alt ="blockbuster" width="135" height="45"></a>
+    <a class="navbar-brand" href="/"> <img src="/assets/images/logo3.png" alt ="blockbuster" width="190" height="75"></a>
           
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,20 +12,20 @@
 
         <li class="nav-item">
         <% if (title == "Home")  { %>
-          <a class="nav-link active" aria-current="page" href="home" style="color:#FFCC00">
+          <a class="nav-link active fa-color" aria-current="page" href="home" style="color:#FFCC00">
         <% } else { %>
           <a class="nav-link" aria-current="page" href="/home">
         <% } %>
-          <i class="fa-solid fa-house"></i> Home</a>
+          <i class="fa-solid fa-house fa-2x"></i> Home</a>
         </li>
 
         <li class="nav-item">
         <% if (title ==  "Rental List"  ) { %>
-          <a class="nav-link active" aria-current="page" href="/blockbuster" style="color:#FFCC00"> 
+          <a class="nav-link active fa-color" aria-current="page" href="/blockbuster" style="color:#FFCC00"> 
         <% } else { %>
           <a class="nav-link" aria-current="page" href="/blockbuster" > 
         <% } %>
-          <i class="fa-solid fa-ticket"></i> Movie List </a>
+          <i class="fa-solid fa-ticket fa-2x"></i> Movie List </a>
         </li>
     </div>
   </div>
