--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include partials/main_nav %>
 <main>
     <div class="homeContainer">
-      <h1 class="home-title">Welcome to  <%= title %></h1>
+      <h1 class="homeTitle">Welcome to  <%= title %></h1>
         <a href="/blockbuster" id="start-button"
              class="btn" style="background-color:#FFCC00">
              <i class="fa-solid fa-clapperboard fa-2x"></i> Get Started </a> 
