--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -11,7 +11,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-        <% if (title == "Home")  { %>
+        <% if (title == "Blockbuster")  { %>
           <a class="nav-link active fa-color" aria-current="page" href="home" style="color:#FFCC00">
         <% } else { %>
           <a class="nav-link" aria-current="page" href="/home">
