--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,11 +5,9 @@
       <h1 class="homeTitle">Welcome to  <%= title %></h1>
         <a href="/blockbuster" id="start-button"
              class="btn" style="background-color:#FFCC00">
-             <i class="fa-solid fa-clapperboard fa-2x"></i> Get Started </a> 
+             <i class="fa-solid fa-clapperboard fa-lg"></i> Get Started </a> 
     </div>
 </main>
-
-
 
 <%- include partials/bottom_nav %>
 <%- include partials/footer %>
