--- a/public/content/app.css
+++ b/public/content/app.css
@@ -6,7 +6,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;500;600;700&display=swap');
 body {
   background-color: #0b075a  !important;
-  margin: 0px;
   font-family: 'Playfair Display', serif;
 }
 
@@ -88,4 +87,13 @@ p {
 @keyframes fade {
   0% {margin-top:0%; opacity:1.0}
   0% {margin-top:100%; opacity:0.0}
+}
+
+.container{
+  position: center !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  gap: 60px !important;
+  flex-direction: column;
 }
