--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -2,9 +2,8 @@
 <%- include ../partials/main_nav %>
 <!--Content for the edit page-->
 
-<div class="container-center">
-    <div class="row"> 
-        <div class="col-md-offset-3 col-md-6">
+<div class="container"> 
+        <div class="col-md-offset-3 col-md-6"> 
             <h1 class="listTitle"> <%= title %></h1> <br><br>
             <form class="form" method="POST">
                 <!-- div for the "name" but user can edit items as well-->
@@ -73,9 +72,7 @@
                 <a href="/blockbuster" class="btn btn-warning">
                     <i class="fas fa-undo"></i> Cancel </a>
             </form>
-
         </div>
-    </div> 
 </div> 
 <%- include ../partials/bottom_nav %>
 <%- include ../partials/footer %>
