Added different subscription tiers in form field

--- a/server/views/movie/add.ejs
+++ b/server/views/movie/add.ejs
@@ -22,7 +22,7 @@
                     <label for="subscriptionTierTextField">  </label>
                     <input type="text" class=form-control 
                     id="subscriptionTierTextField"
-                    placeholder="Enter the Subscription Tier"
+                    placeholder="Enter the Subscription Tier (Standard, Premium, Premium+)"
                     name="subscriptionTier" required>
                 </div>
 
