--- a/public/content/app.css
+++ b/public/content/app.css
@@ -89,7 +89,7 @@ p {
   0% {margin-top:100%; opacity:0.0}
 }
 
-.container{
+.containerCenter{
   position: center !important;
   display: flex !important;
   justify-content: center !important;
