--- a/server/views/movie/add.ejs
+++ b/server/views/movie/add.ejs
@@ -3,7 +3,7 @@
 <!--Content for the add page-->
 
 
-<div class="container-center">
+<div class="containerCenter">
     <div class="row"> 
         <div class="col-md-offset-3 col-md-6">
             <h1 class="listTitle"> <%= title %></h1> <br><br>
