--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -2,7 +2,7 @@
 <%- include ../partials/main_nav %>
 <!--Content for the edit page-->
 
-<div class="container"> 
+<div class="containerCenter"> 
     <div class="col-md-offset-3 col-md-6"> 
         <h1 class="listTitle"> <%= title %></h1> <br><br>
         <form class="form" method="post">
