Added dropdown for subscription, updated ReadMe

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,5 @@
-<%- include partials/header %>
-<%- include partials/main_nav %>
+<%- include ("partials/header") %>
+<%- include ("partials/main_nav") %>
 <main>
     <div class="homeContainer">
       <h1 class="homeTitle">Welcome to  <%= title %></h1>
@@ -9,5 +9,5 @@
     </div>
 </main>
 
-<%- include partials/bottom_nav %>
-<%- include partials/footer %>
+<%- include ("partials/bottom_nav") %>
+<%- include ("partials/footer") %>
