--- a/server/views/movie/list.ejs
+++ b/server/views/movie/list.ejs
@@ -1,5 +1,5 @@
-<%- include ../partials/header %>
-<%- include ../partials/main_nav %>
+<%- include ("../partials/header") %>
+<%- include ("../partials/main_nav") %>
 <main class="container">
     
       <div class="row">
@@ -49,5 +49,5 @@
 
 
 
-<%- include ../partials/bottom_nav %>
-<%- include ../partials/footer %>
+<%- include ("../partials/bottom_nav") %>
+<%- include ("../partials/footer") %>
