--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -73,7 +73,7 @@
             <button class="btn" type="submit" style="background-color:green"> 
                 <i class="fas fa-edit"></i> Apply Changes</button>
 
-            <a href="/blockbuster" class="btn btn-warning">
+            <a href="/blockbuster" class="btn btn-warning" style="background-color:red">
                 <i class="fas fa-undo"></i> Cancel </a>
         </form>
     </div>
