--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,5 +1,5 @@
-<%- include ("partials/header") %>
-<%- include ("partials/main_nav") %>
+<%- include partials/header %>
+<%- include partials/main_nav %>
 <div class="container">
     <h1><%= message %></h1>
     <!--
@@ -8,5 +8,5 @@
     <!--<h2><%= error.status %></h2>-->
     <!--<pre><%= error.stack %></pre>-->
 </div>
-<%- include ("partials/bottom_nav") %>
-<%- include ("partials/footer") %>
+<%- include partials/bottom_nav %>
+<%- include partials/footer %>
