--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -1,5 +1,5 @@
-<%- include ("../partials/header") %>
-<%- include ("../partials/main_nav") %>
+<%- include ../partials/header %>
+<%- include ../partials/main_nav %>
 <!--Content for the edit page-->
 
 <div class="containerCenter"> 
@@ -78,5 +78,5 @@
         </form>
     </div>
 </div> 
-<%- include ("../partials/bottom_nav") %>
-<%- include ("../partials/footer") %>
+<%- include ../partials/bottom_nav %>
+<%- include ../partials/footer %>
