--- a/server/views/movie/add.ejs
+++ b/server/views/movie/add.ejs
@@ -1,5 +1,5 @@
-<%- include ../partials/header %>
-<%- include ../partials/main_nav %>
+<%- include ("../partials/header") %>
+<%- include ("../partials/main_nav") %>
 <!--Content for the add page-->
 
 <div class="containerCenter">
@@ -68,6 +68,6 @@
             </form>
         </div>
     </div> 
-<%- include ../partials/bottom_nav %>
-<%- include ..partials/footer %>
+<%- include ("../partials/bottom_nav") %>
+<%- include ("../partials/footer") %>
 
