--- a/public/content/app.css
+++ b/public/content/app.css
@@ -9,6 +9,8 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
+/*_____________________HOME PAGE*___________________/
+/*Container for home page*/
 .homeContainer { 
   flex-direction: column;
   position: relative;
@@ -30,15 +32,77 @@ body {
   color: #FFCC00;
 }
 
+/*Start button*/
 #start-button {
   color: #0b075a !important;
   text-align: center !important;
 }
 
+/*Clapper board icon in get started button*/
 .fa-clapperboard{
   color: #0b075a;
 }
 
+/*animation for when page loads*/
+img { 
+  animation: fadeIn-Img 1s 1 !important;
+}
+@keyframes fadeIn {
+  100% {margin-top:0%; opacity:1.0}
+  0% {margin-top:1.6%; opacity: 0.0}
+}
+@keyframes fadeIn-Img {
+  100% {margin-top:0%; opacity:1.0}
+  0% {margin-top:50%; opacity: 0.0}
+}
+@keyframes fade {
+  0% {margin-top:0%; opacity:1.0}
+  0% {margin-top:100%; opacity:0.0}
+}
+/*_____________________________________________________________*/
+
+
+
+
+
+
+/*Form fields for login, register, add, edit*/
+.form-group{
+  font-family: 'Nunito', sans-serif;
+  color:white;
+}
+
+
+
+
+/*Button on navbar*/
+#navbarSupportedContent {
+  color:#FFCC00; 
+}
+
+  
+
+/*Container for add and edit page forms*/
+.containerCenter{
+  position: center !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  gap: 60px !important;
+  flex-direction: column;
+}
+
+/*"Please login" on login page*/
+.loginTitle{
+  color: #FFCC00 !important;
+  font-family: 'Bebas Neue', serif !important;
+}
+
+
+
+
+
+/*Formating for list for...........................................................................*/
 .listTitle {
   font-family: 'Oswald', serif; 
   position: relative;
@@ -48,52 +112,14 @@ body {
   color: #FFCC00;
 }
 
-/*animation for when page loads*/
-img { 
-  animation: fadeIn-Img 1s 1 !important;
-}
 
+/*Not sure if we need this......................................*/
 .container-center { 
   position:relative;
   left: 25%;
 }
 
-.form-group{
-  font-family: 'Nunito', sans-serif;
-  color:white;
-}
-
-
-
+/*Not sure if we need this......................................*/
 p {
   background-color: #0b075a;
-}
-
-#navbarSupportedContent {
-  color:#FFCC00; 
-}
-
-  
-@keyframes fadeIn {
-  100% {margin-top:0%; opacity:1.0}
-  0% {margin-top:1.6%; opacity: 0.0}
-}
-  
-@keyframes fadeIn-Img {
-  100% {margin-top:0%; opacity:1.0}
-  0% {margin-top:50%; opacity: 0.0}
-}
-
-@keyframes fade {
-  0% {margin-top:0%; opacity:1.0}
-  0% {margin-top:100%; opacity:0.0}
-}
-
-.containerCenter{
-  position: center !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  gap: 60px !important;
-  flex-direction: column;
 }
