--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,5 +1,5 @@
-<%- include ../partials/header %>
-<%- include ../partials/main_nav %>
+<%- include ("../partials/header") %>
+<%- include ("../partials/main_nav") %>
 
 <main class="container">
     <!--Message Area-->
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="offset-md-4 col-md-4">
-            <h1>Please login</h1>
+            <h1 class="loginTitle">Please Login</h1>
             <form method="post" autocomplete="off">
                 <fieldset class="form-group">
                     <label for="username"></label>
@@ -30,10 +30,11 @@
                     <a href="/register">Register Here</a>
                 </fieldset>
                 <fieldset class="form-group text-right">
-                    <input type="submit" class="btn btn-success"
-                    value="Login">
+                    <button type="submit" class="btn btn-success" value="Login" style="color:black">
+                        <i class="fa-solid fa-right-to-bracket"></i> Login</button>
                     <a href="/"></a>
-                        <input type="button" class="btn btn-warning" value="Cancel">
+                        <a href="/" class="btn btn-warning" style="background-color:red">
+                        <i class="fas fa-undo"></i> Cancel </a>
                     </a>
                 </fieldset>
             </form>
@@ -41,6 +42,6 @@
     </div>
 </main>
 
-<%- include ../partials/bottom_nav %>
-<%- include ../partials/footer %>
+<%- include ("../partials/bottom_nav") %>
+<%- include ("../partials/footer") %>
 
