--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -27,6 +27,19 @@
         <% } %>
           <i class="fa-solid fa-ticket fa-2x"></i> Movie List </a>
         </li>
+
+        <% if(typeof username =='string' && username) { %>
+        <li class="navbar-text">
+        <i class="fas fa-2x fa-user"></i>
+        Welcome, <%= username %> </li>
+        <li class="nav-item">
+          <a href="/logout" class="nav-link">
+          <i class="fas fa-2x fa-sign-out-alt"></i> Logout</a></li>
+        <% } else { %>
+        <li class="nav-item">
+          <a href="/login" class="nav-link">
+          <i class="fas fa-2x fa-sign-in-alt"></i> Login</a></li>
+        <% } %>
     </div>
   </div>
 </nav>
